--- a/TODO
+++ b/TODO
@@ -6,4 +6,5 @@
     * 'ayuda' debería decirte que comandos hay disponibles - DONE ( es 'help' )
     * Buscar al usuario tendría que hacerse al escribir "mudarme a" o algo parecido
     * hacer una queue para las API calls a twitter - DONE
+    * hacer una queue para las API calls a twitter - DONE
     * 'pronostico' manda el mensaje de acuerdo al pronostico en la location del user
